Version <next version> released on <date>

Security
 * Reflected Cross-site scripting (XSS) in Web Admin printing system (#1362)

Enhancements
 * Migrated our documentation from a binary-only ODT to a flexible asciidoc format
 * Code and tests refactoring
 * Minor documentation update for Aruba Controllers
 * Performance: avoiding some redundant operations on startup

Bug Fixes
 * Buttons in graphs.php of type ifoctetshistoryswitch, ifoctetshistoryuser, ifoctetshistorymac (#1110)
 * Web Admin usability fixes (#1071)
 * Small typo error in node.pm log message (#1357)
 * Interpolation issue in pf::web::custom's code which is disabled by default (#1358)
 * Allow more than one SNMPv3 EngineID per user (#1354)
 * OS and violation classes properly displayed in printer-friendly tables in the Web Admin
 * Disabled config ownership tests because of too many false positives (#1345)

Translations
 * Updated Brazilian Portuguese (pt_BR) Admin guide translation (Thanks to Diego de Souza Lopes)

--------------------------------------------------------------------------------
Version 3.1.0 released on 2011-12-23

New Hardware Support
 * Stacked Cisco 3750 in MAC-Auth or 802.1X
 * AeroHIVE, Aruba and Motorola support RADIUS Disconnect (RFC3576) to perform de-authentication

New Features
 * Statement of Health (SoH) support for reliable client-side policy compliance through 802.1X
 * MAC violation triggers allowing to isolate a single device (#1320)
 * Detection of rogue DHCP Servers even behind relays (#1151)
 * RFC3576 (RADIUS Change of Authorization / Disconnect) support added
 * Preview support for wired port-bounce on Cisco through CoA (RFC3576). Disabled by default.
 * Wireless profile provisioning for iPhone, iPods, and iPads devices
 * SNMP traps rate-limiting mechanism
 * New graphs in the web admin UI -- replaced jpgraph (PHP) by gRaphael (JavaScript)

Enhancements
 * Using HTTP Return Code 501 "Not Implemented" for more effective client blocking